Fixed padding, margins, and button spacing in ListOfTextEntries component

--- a/src/containers/consumerOnboarding/productionAccessFormSteps/ListOfTextEntries.scss
+++ b/src/containers/consumerOnboarding/productionAccessFormSteps/ListOfTextEntries.scss
@@ -1,5 +1,24 @@
-.va-text-entry-field {
+@import '../../../styles/variables.scss';
+.va-text-entry-container {
+  max-width: 50%;
   button[name='remove'] {
-    margin-left: -10%;
+    width: 28%;
+    margin-left: auto;
+    margin-right: 0;
+    margin-bottom: 0;
   }
+  input {
+    max-width: none;
+    // margin-right: 0;
+  }
+}
+.va-text-entry-field {
+  input:disabled {
+    background-color: $color-gray-lighter;
+  }
+}
+.va-text-entry-field-edit {
+  // margin-right: 0 !important;
+  // width: 90% !important;
+  // margin-left: auto;
 }
